# OMG

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: static.yml
assets/stats/: g1_125d_stats.json
configs/generation/: train.yaml
docs/: artifacts.md  benchmark.md  configuration.md  data.md  development.md  generation.md  installation.md  realtime_g1.md  tracking.md  training.md
scripts/: dev-server.mjs  materialize_omg_data.sh  validate_lerobot_official.py  verify-site.mjs
scripts/realtime/: g1_smoke_test.sh
src/omg/: __init__.py
static/css/: index.css
tests/benchmarks/: test_evaluator_runtime.py
tests/callbacks/: test_divergence_guard.py
tests/data/: test_build_lerobot_config.py  test_lerobot_dataset.py  test_lerobot_export.py  test_lerobot_official_compat.py  test_split_yaml.py  test_unified_g1_motion_index.py
tests/generation/: test_audio_motion_metrics.py  test_benchmark.py  test_benchmark_metrics.py  test_benchmark_report.py  test_checkpoint_architecture.py  test_compute_stats.py  test_datamodule_sampler.py  test_episode_cache.py  test_export_onnx_contract.py  test_guided_conditions.py  test_guided_diffusion_weights.py  test_hydra_compose.py  test_materialized_dataset.py  test_materialized_sampler.py  test_motion_loss_reduction.py  test_optional_conditions.py  test_physical_benchmark.py  test_qk_normalized_attention.py  test_rotation_representation.py  test_tracker_executed_benchmark.py  test_train_callbacks.py  test_train_config.py
tests/pipeline/: test_planner_contract.py
tests/realtime/: test_motion_buffer.py  test_protocol.py  test_sim_stream.py
tests/robots/: test_g1_kinematics_fast.py
tests/sanity/: check_condition_forward.py  check_datasets.py  (+1 more)
(+165 files in other folders)
