[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omg"
version = "0.1.0"
description = "Lightning-Hydra research framework for robot motion generation, tracking, and pipeline integration."
license = { text = "MIT" }
requires-python = ">=3.10,<3.11"
dependencies = [
  "hydra-core==1.3.0",
  "numpy>=1.23,<2.0",
  "omegaconf==2.3.0",
  "pytorch-lightning>=2.6,<2.7",
  "pyyaml>=6.0",
  "scipy>=1.10",
  "torch>=2.6,<2.7",
  "tqdm>=4.66,<5",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
train = [
  "sentencepiece>=0.2,<0.3",
  "transformers>=4.40,<5",
  "wandb>=0.26,<0.27",
]
render = [
  "matplotlib>=3.10,<3.11",
  "mujoco>=3.7,<3.8",
  "opencv-python>=4.9",
]
data = [
  "datasets>=4,<5",
  "huggingface-hub>=0.34,<1",
  "pandas>=2.2,<2.4",
  "pyarrow>=16,<22",
]
benchmark = [
  "transformers>=4.40,<5",
]
tracking = [
  "imageio>=2.34,<3",
  "mujoco>=3.7,<3.8",
  "onnxruntime-gpu>=1.18,<2",
  "tensorrt-cu12>=10.16,<10.17",
]
realtime = [
  "pyzmq>=26,<27",
]
export = [
  "onnx>=1.16,<2",
  "onnxruntime-gpu>=1.18,<2",
  "onnxscript>=0.7,<0.8",
]
dev = [
  "pytest>=8.0",
]
all = [
  "datasets>=4,<5",
  "imageio>=2.34,<3",
  "huggingface-hub>=0.34,<1",
  "matplotlib>=3.10,<3.11",
  "mujoco>=3.7,<3.8",
  "onnxruntime-gpu>=1.18,<2",
  "opencv-python>=4.9",
  "pandas>=2.2,<2.4",
  "pyarrow>=16,<22",
  "pytest>=8.0",
  "pyzmq>=26,<27",
  "tensorrt-cu12>=10.16,<10.17",
  "sentencepiece>=0.2,<0.3",
  "transformers>=4.40,<5",
  "wandb>=0.26,<0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
